feat: Project notebook splitted in two new files

--- a/1_Customer_Segmentation_Report.ipynb
+++ b/1_Customer_Segmentation_Report.ipynb
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,7 +33,7 @@
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
     "import seaborn as sns\n",
-    "\n",
+    "import pickle\n",
     "# magic word for producing visualizations in notebook\n",
     "%matplotlib inline"
    ]
@@ -3389,7 +3389,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 166,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3400,9 +3400,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 167,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'attributes' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-167-6aa2f1a22fab>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m# Intersection between customers dataframe and attributes dataframe\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0mintersection_attributes\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mlist\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mset\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mcustomers_scaled\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcolumns\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mintersection\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mattributes\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mAttribute\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m: name 'attributes' is not defined"
+     ]
+    }
+   ],
    "source": [
     "# Intersection between customers dataframe and attributes dataframe\n",
     "intersection_attributes = list(set(customers_scaled.columns).intersection(attributes.Attribute))"
@@ -3549,7 +3561,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 168,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3558,7 +3570,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 169,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3581,7 +3593,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 170,
    "metadata": {},
    "outputs": [
     {
@@ -3594,6 +3606,19 @@
    ],
    "source": [
     "reduced_azdias,pca_azdias = dim_reduction(azdias_scaled, pca=PCA)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 172,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Save PCA model to use later\n",
+    "import pickle\n",
+    "\n",
+    "filename = 'pca_model.sav'\n",
+    "pickle.dump(pca_azdias, open(filename, 'wb'))"
    ]
   },
   {
@@ -4857,7 +4882,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": 173,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4867,7 +4892,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 124,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4876,7 +4901,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": 175,
    "metadata": {},
    "outputs": [
     {
@@ -4885,7 +4910,7 @@
        "(891221, 16)"
       ]
      },
-     "execution_count": 125,
+     "execution_count": 175,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4995,7 +5020,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
+   "execution_count": 176,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -5004,16 +5029,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 127,
+   "execution_count": 177,
    "metadata": {},
    "outputs": [],
    "source": [
-    "reduced_azdias['Cluster'] = km.fit_predict(reduced_azdias)"
+    "km_azdias = km.fit(reduced_azdias)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 128,
+   "execution_count": 180,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Save K-means model to use later\n",
+    "\n",
+    "filename = 'kmeans_model.sav'\n",
+    "pickle.dump(km_azdias, open(filename, 'wb'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 178,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "reduced_azdias['Cluster'] = km.predict(reduced_azdias)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 179,
    "metadata": {},
    "outputs": [
     {
@@ -5207,7 +5253,7 @@
        "191657  0.129995  0.021845        4  "
       ]
      },
-     "execution_count": 128,
+     "execution_count": 179,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -5554,7 +5600,7 @@
     "percentage_grouped = np.round(max_count/sum_count,2)*100\n",
     "# The cluster where the most population is regrouped\n",
     "cluster_number = counts_azdias[counts_azdias==max(counts_azdias)].index[0]\n",
-    "print ('{}% of the indivduals of **actuality of the last transaction for the segment mail-order TOTAL** with the highest activity within the last 12 months are grouped in cluster number {} for azdias dataset.'.format(percentage_grouped,cluster_number))\n"
+    "print ('{}% of the indivduals of **actuality of the last transaction in D19_VERSAND_DATUM: the segment mail-order TOTAL** with the highest activity within the last 12 months are grouped in cluster number {} in azdias dataset.'.format(percentage_grouped,cluster_number))\n"
    ]
   },
   {
@@ -5579,7 +5625,7 @@
     "percentage_grouped = np.round(max_count/sum_count,2)*100\n",
     "# The cluster where the most population is regrouped\n",
     "cluster_number = counts_customers[counts_customers==max(counts_customers)].index[0]\n",
-    "print ('{}% of the indivduals of **actuality of the last transaction for the segment mail-order TOTAL** with the highest activity within the last 12 months are grouped in cluster number {} for customers dataset.'.format(percentage_grouped,cluster_number))\n"
+    "print ('{}% of the indivduals of **actuality of the last transaction in D19_VERSAND_DATUM: the segment mail-order TOTAL** with the highest activity within the last 12 months are grouped in cluster number {} in customers dataset.'.format(percentage_grouped,cluster_number))\n"
    ]
   },
   {
@@ -5659,13 +5705,6 @@
    "source": [
     "mailout_test = pd.read_csv('../../data/Term2/capstone/arvato_data/Udacity_MAILOUT_052018_TEST.csv', sep=';')"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
