docs: Updated project notebooks

--- a/1_Customer_Segmentation_Report.ipynb
+++ b/1_Customer_Segmentation_Report.ipynb
@@ -989,7 +989,13 @@
       "KBA13_CCM_3000 : share of cars with 2500ccm to 2999ccm within the PLZ8\n",
       "KBA05_HERST1 : share of top German manufacturer (Mercedes, BMW) \n",
       "KBA13_HERST_EUROPA : share of European cars within the PLZ8\n",
-      "KBA05_MOD8 : share of vans (in an AZ specific definition)\n",
+      "KBA05_MOD8 : share of vans (in an AZ specific definition)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "SEMIO_TRADV : affinity indicating in what way the person is traditional minded\n",
       "D19_BANKEN_ANZ_12 : transaction activity BANKS in the last 12 months\n",
       "KBA13_SEG_SONSTIGE : share of other cars within the PLZ8\n",
