docs: Updated project notebooks

--- a/2_Supervised_Learning_Model.ipynb
+++ b/2_Supervised_Learning_Model.ipynb
@@ -577,7 +577,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Dropping same columns in azdias and customers dataset\n",
+    "# Features that we keep for Train an Test dataframes\n",
     "clean_mailout_train_raw_dropna = clean_mailout_train_raw[['CJT_GESAMTTYP', 'CJT_KATALOGNUTZER', 'CJT_TYP_1', 'CJT_TYP_2',\n",
     "        'CJT_TYP_3', 'CJT_TYP_4', 'CJT_TYP_5', 'CJT_TYP_6', 'D19_BANKEN_DATUM',\n",
     "        'D19_BANKEN_OFFLINE_DATUM', 'D19_BANKEN_ONLINE_DATUM',\n",
@@ -1202,7 +1202,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Once our unsupervised model is implemented and its performance is measured, we want to compare it to another model (benchmark). The goal is train a supervised model and comapre its metrics to our K-means model previously tested. In this project we choosed [Logisitc Regression](https://scikit-learn.org/stable/modules/generated/sklearn.linear_model.LogisticRegression.html) provided by Scikitlearn. The goal in the following code is to train, predict, test, measure and finally compare our model to provide a reliable conclusion to this project.  "
+    "Once our unsupervised model is implemented and its performance is measured,now it's time to create our benchmark model. The goal is to train a supervised model and comapre its metrics to our K-means model previously tested. In this project we choosed [Logisitc Regression](https://scikit-learn.org/stable/modules/generated/sklearn.linear_model.LogisticRegression.html) provided by Scikitlearn. In the following code we train, predict, test, measure and compare our model to finally provide a reliable conclusion to this project.  "
    ]
   },
   {
