docs: Final Update

--- a/1_Customer_Segmentation_Report.ipynb
+++ b/1_Customer_Segmentation_Report.ipynb
@@ -44,7 +44,7 @@
    "source": [
     "## Part 0: Get to Know the Data\n",
     "\n",
-    "This project is composed of two parts and each dataset is used as follows:\n",
+    "This project is composed of two parts and four datasets as follows\n",
     "\n",
     "**1 - Customer Segmentation Report (unsupervised learning):**\n",
     "\n",
@@ -989,7 +989,13 @@
       "KBA13_CCM_3000 : share of cars with 2500ccm to 2999ccm within the PLZ8\n",
       "KBA05_HERST1 : share of top German manufacturer (Mercedes, BMW) \n",
       "KBA13_HERST_EUROPA : share of European cars within the PLZ8\n",
-      "KBA05_MOD8 : share of vans (in an AZ specific definition)\n",
+      "KBA05_MOD8 : share of vans (in an AZ specific definition)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "SEMIO_TRADV : affinity indicating in what way the person is traditional minded\n",
       "D19_BANKEN_ANZ_12 : transaction activity BANKS in the last 12 months\n",
       "KBA13_SEG_SONSTIGE : share of other cars within the PLZ8\n",
@@ -3388,6 +3394,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### I. Explore cleaned data attributes"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 166,
    "metadata": {},
@@ -3424,7 +3437,7 @@
    "cell_type": "code",
    "execution_count": 57,
    "metadata": {
-    "scrolled": true
+    "scrolled": false
    },
    "outputs": [
     {
@@ -3557,6 +3570,13 @@
    "source": [
     "print ('List of features with no description: ')\n",
     "no_desc_list"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### II. Creating PCA model"
    ]
   },
   {
@@ -3882,7 +3902,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##### Data Variance\n",
+    "#####  III. Data Variance\n",
     "\n",
     "Our PCA model creates 57 principal components, however we will select top_n components to capture a defined explained variance set here to 80%-90%. The top_n components value is determined by using pca attribute [pca.explained_variance_ratio_](https://scikit-learn.org/stable/modules/generated/sklearn.decomposition.PCA.html). Thereafter we will analyse the impact (weight) of each feature on each component using pca.components_ provided by sklearn module."
    ]
@@ -4198,7 +4218,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##### Data variance vs dimensionality reduction"
+    "##### IV. Data variance vs dimensionality reduction"
    ]
   },
   {
@@ -4276,7 +4296,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##### Component Makeup\n",
+    "##### V. Component Makeup\n",
     "\n",
     "Once we have determine the top_n components, we want to visualize the makeup of each PCA component based on the weightings of the original features that are included in the component. To make it possible we create a function to display ascending n_weights features in th component.\n"
    ]
@@ -4763,7 +4783,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##### I. Histogram"
+    "##### VI. Components Histogram"
    ]
   },
   {
@@ -4804,7 +4824,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##### II. Correlation matrix heatmap"
+    "##### VII. Correlation matrix heatmap"
    ]
   },
   {
@@ -5632,77 +5652,6 @@
    "metadata": {},
    "outputs": [],
    "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Part 2: Supervised Learning Model\n",
-    "\n",
-    "Now that you've found which parts of the population are more likely to be customers of the mail-order company, it's time to build a prediction model. Each of the rows in the \"MAILOUT\" data files represents an individual that was targeted for a mailout campaign. Ideally, we should be able to use the demographic information from each individual to decide whether or not it will be worth it to include that person in the campaign.\n",
-    "\n",
-    "The \"MAILOUT\" data has been split into two approximately equal parts, each with almost 43 000 data rows. In this part, you can verify your model with the \"TRAIN\" partition, which includes a column, \"RESPONSE\", that states whether or not a person became a customer of the company following the campaign. In the next part, you'll need to create predictions on the \"TEST\" partition, where the \"RESPONSE\" column has been withheld."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 163,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/opt/conda/lib/python3.6/site-packages/IPython/core/interactiveshell.py:2785: DtypeWarning: Columns (18,19) have mixed types. Specify dtype option on import or set low_memory=False.\n",
-      "  interactivity=interactivity, compiler=compiler, result=result)\n"
-     ]
-    }
-   ],
-   "source": [
-    "mailout_train = pd.read_csv('../../data/Term2/capstone/arvato_data/Udacity_MAILOUT_052018_TRAIN.csv', sep=';')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 165,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0    42430\n",
-       "1      532\n",
-       "Name: RESPONSE, dtype: int64"
-      ]
-     },
-     "execution_count": 165,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "mailout_train['RESPONSE'].value_counts()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Part 3: Kaggle Competition\n",
-    "\n",
-    "Now that you've created a model to predict which individuals are most likely to respond to a mailout campaign, it's time to test that model in competition through Kaggle. If you click on the link [here](http://www.kaggle.com/t/21e6d45d4c574c7fa2d868f0e8c83140), you'll be taken to the competition page where, if you have a Kaggle account, you can enter. If you're one of the top performers, you may have the chance to be contacted by a hiring manager from Arvato or Bertelsmann for an interview!\n",
-    "\n",
-    "Your entry to the competition should be a CSV file with two columns. The first column should be a copy of \"LNR\", which acts as an ID number for each individual in the \"TEST\" partition. The second column, \"RESPONSE\", should be some measure of how likely each individual became a customer – this might not be a straightforward probability. As you should have found in Part 2, there is a large output class imbalance, where most individuals did not respond to the mailout. Thus, predicting individual classes and using accuracy does not seem to be an appropriate performance evaluation method. Instead, the competition will be using AUC to evaluate performance. The exact values of the \"RESPONSE\" column do not matter as much: only that the higher values try to capture as many of the actual customers as possible, early in the ROC curve sweep."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "mailout_test = pd.read_csv('../../data/Term2/capstone/arvato_data/Udacity_MAILOUT_052018_TEST.csv', sep=';')"
-   ]
   }
  ],
  "metadata": {
